--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,47 @@
     "description": "Referenzen von MAW",
     "type": "contao-bundle",
     "require": {
-        "contao/core-bundle": "^4.4"
+        "php": "^5.6 || ^7.0",
+        "contao/core-bundle": "4.4.*",
+        "symfony/framework-bundle": "^3.3"
     },
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
             "name": "Stephan Buder",
-            "email": "stephan@maniax-at-work.de"
+            "email": "stephan@maniax-at-work.de",
+	    "homepage": "https://www.maniax-at-work.de"
         }
     ],
-	"autoload": {
+    "autoload": {
         "psr-4": {
-		    "maniax-at-work\\ContaoPortfolioBundle\\": "src/"
-		}
+  	    "maniax-at-work\\ContaoPortfolioBundle\\": "src/"
 	}
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "maniax-at-work\\ContaoPortfolioBundle\\Tests\\": "tests/"
+        }
+    },
+    "support": {
+        "issues": "https://github.com/maniax-at-work/contao-porfolio-bundle/issues",
+        "source": "https://github.com/maniax-at-work/contao-porfolio-bundle"
+    },
+    "conflict": {
+        "contao/core": "*",
+        "contao/manager-plugin": "<2.0 || >=3.0"
+    },
+    "require-dev": {
+        "contao/manager-plugin": "^2.0",
+        "doctrine/doctrine-cache-bundle": "^1.3",
+        "friendsofphp/php-cs-fixer": "^2.6",
+        "leofeyer/optimize-native-functions-fixer": "^1.1",
+        "php-http/guzzle6-adapter": "^1.1",
+        "php-http/message-factory": "^1.0.2",
+        "phpunit/phpunit": "^5.7.26",
+        "symfony/phpunit-bridge": "^3.2"
+    },
+    "extra": {
+        "contao-manager-plugin": "Acme\\ContaoHelloWorldBundle\\ContaoManager\\Plugin"
+    },
 }
